# Idm

./: .gitignore  CMakeLists.txt
include/: feature.h
system/: CMakeLists.txt
system/main/: AddIndexServer.cpp  CMakeLists.txt  VideoRetrievalSystem.cpp
system/utils/: CMakeLists.txt  feature.cpp
